<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/scroll_bg">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/profile"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:src="@drawable/male"/>

    <TextView style="@style/SubTitle"
        android:id="@+id/sub_title"
        android:layout_height="100dp"
        android:layout_margin="0dp"
        android:paddingStart="20dp"
        android:gravity="center"
        android:layout_toEndOf="@id/profile"
        android:text="@string/display_title"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_margin="10dp"
        android:layout_below="@id/profile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView style="@style/DisplayLabel"
                android:text="@string/student_name_text"/>
            <TextView style="@style/DisplayText"
                android:id="@+id/more_info_name"/>

            <TextView style="@style/DisplayLabel"
                android:layout_marginTop="20dp"
                android:text="@string/roll_number_text"/>
            <TextView style="@style/DisplayText"
                android:id="@+id/more_info_roll_no"/>

            <TextView style="@style/DisplayLabel"
                android:layout_marginTop="20dp"
                android:text="@string/enrollment_number_text"/>
            <TextView style="@style/DisplayText"
                android:id="@+id/more_info_enrollment"/>

            <TextView style="@style/DisplayLabel"
                android:layout_marginTop="20dp"
                android:text="@string/student_age_text"/>
            <TextView style="@style/DisplayText"
                android:id="@+id/more_info_age"/>

            <TextView style="@style/DisplayLabel"
                android:layout_marginTop="20dp"
                android:text="@string/gender_text"/>
            <TextView style="@style/DisplayText"
                android:id="@+id/more_info_gender"/>

            <TextView style="@style/DisplayLabel"
                android:layout_marginTop="20dp"
                android:text="@string/email_text"/>
            <TextView style="@style/DisplayText"
                android:id="@+id/more_info_email"/>

            <TextView style="@style/DisplayLabel"
                android:layout_marginTop="20dp"
                android:text="@string/branch_text"/>
            <TextView style="@style/DisplayText"
                android:id="@+id/more_info_branch"/>

            <TextView style="@style/DisplayLabel"
                android:layout_marginTop="20dp"
                android:text="@string/year_text"/>
            <TextView style="@style/DisplayText"
                android:id="@+id/more_info_year"/>

            <TextView style="@style/DisplayLabel"
                android:layout_marginTop="20dp"
                android:text="@string/phone_text"/>
            <TextView style="@style/DisplayText"
                android:id="@+id/more_info_phone"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
</FrameLayout>