<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView style="@style/MainTitle"/>

    <TextView style="@style/SubTitle"
        android:text="Choose Activity"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:layout_margin="10dp">

        <!--buttons: general-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/browseBtn"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:text="@string/browse_btn"
            android:drawableTop="@drawable/browse"
            style="@style/ButtonStyle"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addBtn"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:text="@string/add_btn"
            android:drawableTop="@drawable/add"
            style="@style/ButtonStyle"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/updateBtn"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:text="@string/update_btn"
            android:drawableTop="@drawable/update"
            style="@style/ButtonStyle"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/deleteBtn"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:text="@string/delete_btn"
            android:drawableTop="@drawable/remove"
            style="@style/ButtonStyle"
            />
    </GridLayout>

</LinearLayout>